main/static/multistream.less
@defaultfont: 'PT Sans', sans-serif;
@black: #171717;
@white: #ffffff;
@grey: #666666;
@ltgrey: #c8c8c8;
@vltgrey: #aaaaaa;
@blue: #1969AB;

* { margin: 0; }

.clearfix:after {
    content: ".";
    display: block;
    clear: both;
    visibility: hidden;
    line-height: 0;
    height: 0;
}

.floatleft {
	float: left;
}
.floatright {
	float: right;
}

body, html {
	height: 100%;
}

body {
	font-family: @defaultfont;
	background: url('images/body-bg.jpg') center center fixed;
	background-size: cover;
}

input[type='text'], input[type='password'], textarea {
	font-family: @defaultfont;
	background: @white;
	color: @black;
}

/* Transitions, YAY */
a:link, 
.layoutselector,
button,
.channel {
	transition: background-color 0.5s, color 0.5s, opacity 0.5s;
}

button, .button {
	font-family: @defaultfont;
	background: rgba(0, 0, 0, 0.1);
	color: @black;
	border: solid 1px @black;
	border-radius: 5px;
	font-weight: bold;
	font-size: 18px;
	cursor: pointer;
	
	&:hover {
		background: rgba(0, 0, 0, 0.2);
	}
	
	.viewtemplate & {
		background: rgba(255, 255, 255, 0.9);
		border: none;
		margin: 1px;
		color: @black;
		border-radius: 5px;
		font-weight: bold;
		cursor: pointer;
		text-align: center;
		font-size: 16px;
		line-height: 18px;
		padding: 2px 4px;
		
		&:hover {
			background: @white;	
		}
		&:active {
			background: rgba(220, 220, 220, 1);	
		}
	}

	&.roundedleft {
		border-top-right-radius: 0;
		border-bottom-right-radius: 0;
	}
	&.roundedright {
		border-top-left-radius: 0;
		border-bottom-left-radius: 0;
	}
	&.square {
		border-radius: 0;
	}
	
	.streamoverlay & {
		line-height: 20px;
	}
	
}

.tooltiponly {
	.tooltip;
	font-size: 0;
	
	&:after {
		font-size: 16px;
	}
}

.tooltip {
	position: relative;
	
	&:hover:after{
		background: @black;
		opacity: 0.8;
		border-radius: 5px;
		bottom: 26px;
		color: @white;
		content: attr(title);
		left: -2em;
		padding: 5px 15px;
		position: absolute;
		z-index: 98;
		width: 4em;
	}
}

span.deleteicon {
	position: relative;
	
	span {
		position: absolute;
		display: block;
		top: 1px;
		right: 5px;
		width: 16px;
		height: 16px;
		background: url('images/delete-icon-black.png') no-repeat center center;
		cursor: pointer;
		opacity: 0.4;
		
		&:hover {
			opacity: 0.7;
		}
	}
	
	input {
		padding-right: 16px;
	}
}




#bodywrapper {
	height: 100%;
}
#backgroundoverlay {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background: rgba(0,0,0,0.7);
	overflow: auto;	
	z-index: -2;
}
#sidebar {
	position: fixed;
	top: 0;
	left: 0;
	height: 100%;
	width: 60px;
	
	a.logo {
		position: absolute;
		left: 0;
		bottom: 0;
		display: block;
		width: 100%;
		height: 280px;
		background: url('images/multistream-white-sideways2.png') center center no-repeat;
	}
	
	a.edit {
		display: block;
		background: rgba(0,0,0,0.5) url('images/edit-white.png') center center no-repeat;
		border-radius: 5px;
		margin: 5px;
		opacity: 0.5;
		border: solid 1px #888;
	}
	
	a.edit:hover,
	a.edit.selected {
		opacity: 1;
	}
	
	.sidebar-button {
		width: 50px;
		height: 50px;
	}
}


#contentwrapper {
	margin: 0 auto;
	width: 100%;
	height: 100%;
	
	&.indextemplate {
		position: absolute;
		width: 80%;
		max-width: 1030px;
		height: auto;
		left: 50%;
		margin-left: -523px;
		box-shadow: 0 0 5px 5px rgba(0,0,0,0.2);
		background: white;
		margin-bottom: 10%;
	}
	
	&.viewtemplate {
		margin-left: 3%;
		margin-left: calc(60px);
		width: 97%;
		width: calc(100% - 60px);
		overflow: hidden;
	}
}


#logo {
	display: block;
	width: 100%;
	height: 120px;
	background: @black url('images/multi-logo.png') 40px 40px no-repeat;
}

#sponsorlogo {
	position: absolute;
	right: 50px;
	top: 70px;
	display: block;
	width: 214px;
	height: 44px;
	background: url('images/pcpplogo.png') center center no-repeat;
}

#menu-primary-menu {
	width: 100%;
	list-style-type: none;
	padding: 5px 0;
	text-align: center;
	background: #eee;
	
	li {
		display: inline-block;
		font-size: 80%;
		
		a {
			color: @black;
			text-decoration: none;
			padding: 2px 5px;
			
			&:hover {
				background: #1969ab;
				color: white;
			}
		}
	}
}


#layoutwrapper {
	position:relative; 
	margin: 0 auto;
	
	&.dimmed {
		z-index: -1;
	}
}

#buildlayoutform {
	label, .streamfield {
		font-size: 20px;
		padding: .1em .2em;
		margin: 5px 0;
	}
	
	label {
		font-weight: bold;
		padding-right: 20px;
	}
	
	.streamfield {
		border: solid 1px @grey;
		border-radius: 5px;
	}
	
	#submitbuttoncontainer {
		margin: 10px 45px 20px;
		display: none;
	}
}

#submitbuttoncontainer {
	text-align: center;
	
	button {
		width: 22%;
		margin: 0 5px;
	}	
}

.streamfieldcontainer {
	text-align: center;
}

.formcaption {
	text-align: center;
	font-size: 80%;
	font-style: italic;
	color: #888;
	position: absolute;
	right: 1em;
	top: 1em;
	
	a {
		color: @grey;
		text-decoration: none;
		
		&:hover {
			color: #444;
		}
	}
}

.streamstatusicon {
	vertical-align: middle;
	display: inline-block;
	width: 38px;
	height: 16px;
	margin-left: 16px;
	
	&[data-status="loading"] {
		background: url('images/loading.gif') left center no-repeat;
	}
	&[data-status="doesntexist"] {
		background: url('images/strikethrough-black.png') left center no-repeat;
	}
	&[data-status="exists"] {
		background: url('images/checkmark-black.png') left center no-repeat;
	}
	&[data-status="existsandstreaming"] {
		background: url('images/checkmark-camera-black.png') left center no-repeat;
	}
}


#popupoverlay {
	position: fixed;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;
	z-index: 99;
	background: black;
	opacity: 0.4;
}
/* ... */

